@@ -1,3 +1,11 @@
+2007-12-20  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam.
+
+        * wtf/OwnPtr.h:
+        (WTF::operator==): Added.
+        (WTF::operator!=): Added.
+
 2007-12-20  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
